--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "imgur-image-upload",
+	"name": "image-upload-for-imgur",
 	"version": "1.0.0",
 	"description": "Provides a Gutenberg block to upload an image to imgur via API.",
 	"author": "threadi",
