--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "threadi/image-upload-for-imgur",
 	"version": "1.0.0",
-	"description": "Provides a Gutenberg block to upload an image to imgur via API.",
+	"description": "Provides a Gutenberg block to upload an image to Imgur via API.",
 	"type": "wordpress-plugin",
 	"scripts": {
 		"post-install-cmd": [
