--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "image-upload-for-imgur",
 	"version": "1.0.0",
-	"description": "Provides a Gutenberg block to upload an image to imgur via API.",
+	"description": "Provides a Gutenberg block to upload an image to Imgur via API.",
 	"author": "threadi",
 	"license": "GPL-2.0-or-later",
 	"main": "src/index.js",
