--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -49,6 +49,8 @@ jobs:
 
       - name: ZIP plugin
         run: |
+          rm -fr assets
+          rm -fr build
           cd ..
           zip -r -q ${{ github.event.repository.name }}_${{ github.ref_name }}.zip ${{ github.event.repository.name }}/* -x "*/.git/*" "*/.github/*" "*/phpcs.xml" "*/composer.json" "*/composer.lock" "*/readme.md" "*/.gitignore" "*/vendor/*" "*/svn/*" "*/releases/*"
           zip -ur ${{ github.event.repository.name }}_${{ github.ref_name }}.zip ${{ github.event.repository.name }}/vendor/autoload.php
