--- a/.github/workflows/build-zip.yml
+++ b/.github/workflows/build-zip.yml
@@ -24,6 +24,9 @@ jobs:
           npm i
           cd ../../../
 
+      - name: Run PHPStan check
+        run: vendor/bin/phpstan analyse
+
       - name: Generate autoloader
         run: composer dump-autoload -oa --no-dev
 
