--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "threadi/image-upload-for-imgur",
-	"version": "1.0.0",
+	"version": "1.0.5",
 	"description": "Provides a Gutenberg block to upload an image to Imgur via API.",
 	"type": "wordpress-plugin",
 	"scripts": {
@@ -23,11 +23,16 @@
 	},
 	"require-dev": {
 		"wp-coding-standards/wpcs": "^3.1.0",
-        "automattic/vipwpcs": "^3.0"
-	},
+        "automattic/vipwpcs": "^3.0",
+        "phpstan/phpstan": "^2.1",
+        "szepeviktor/phpstan-wordpress": "^2.0",
+        "phpstan/extension-installer": "^1.4",
+        "php-stubs/wp-cli-stubs": "^2.11"
+    },
     "config": {
         "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
         },
         "optimize-autoloader": true,
         "classmap-authoritative": true,
